fix spacing on genre area

--- a/app/assets/stylesheets/components/_new_track_form.scss
+++ b/app/assets/stylesheets/components/_new_track_form.scss
@@ -163,6 +163,9 @@ input[type="text"].name-your-track {
   flex-shrink: 0;
 }
 
+input[type="text"].pick-your-genre {
+  margin-bottom: 5px;
+}
 .upload-form textarea {
   padding-top: 5px;
   padding-left: 5px;
